--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -4,6 +4,16 @@
     <title>Projects</title>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav>
+        <ul id="navbar-list">
+            <li class="navbar-item"><a href="/front_page">Home</a></li>
+            <li class="navbar-item"><a href="/projects">Projects</a></li>
+            <li class="navbar-item"><a href="/resume">Resume</a></li>
+            <li class="navbar-item" id="nav-contact"><a>Contact</a></li>
+        </ul>
+    </nav>
+        
     <h1> Projects </h1>
 </body>
 </html>
