--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" href="/stylesheets/resume.css">
 </head>
 <body>
-    <h1>About</h1>
+    <!-- Navbar -->
+    <nav>
+        <ul id="navbar-list">
+            <li class="navbar-item"><a href="/">Home</a></li>
+            <li class="navbar-item"><a href="/projects">Projects</a></li>
+            <li class="navbar-item"><a href="/resume">Resume</a></li>
+            <li class="navbar-item" id="nav-contact"><a href="/?contact=true">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <div class="container" style="text-align: center;">
+            <iframe src="https://drive.google.com/file/d/1Rd58lSSnLqasOANPWcU5EpCOQ6muL0Gt/preview" width="640" height="480" allow="autoplay"></iframe>
+
+            <a class="download-btn" href="/pdf/resume.pdf" download="resume">Download</a>
+
+        </div>
+    </section>
 </body>
 </html>
