--- a/public/stylesheets/front_page.css
+++ b/public/stylesheets/front_page.css
@@ -53,8 +53,6 @@ nav {
     transform: translateY(4px);
 }
 
-
-
 .navbar-item a {
     color: white;
     text-decoration: none;
@@ -68,7 +66,7 @@ nav {
 .front-image {
     height: calc(100vh);
     padding-top: 75px;
-    background-image: url("bg.jpg");
+    background-image: url("/images/bg.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -149,8 +147,8 @@ nav {
 
 /* Footer */
 .footer {
-    height: 300px; 
-    background: black;
+    height: 25px; 
+    background: #4E4E50;
 }
 
 .container a {
