--- a/views/front_page.ejs
+++ b/views/front_page.ejs
@@ -30,7 +30,7 @@
             <div id="welcome-armando">
                 <div id="welcome-content">
                     <h1 id="front-name">Armando Salcido</h1>
-                    <p id="front-description">Here is some filler text for the random story that will be a description about myself but right now has nothing so im just typing random words lol</p>             
+                    <p id="front-description">Passionate about programming, dedicated, self-starter, and love working in a team environment</p>             
                 </div>
             </div>
 
@@ -44,37 +44,53 @@
     <section id="about-section">
         <div class="container">
             <h1 class="section-header" id="about-section-header">About</h1>
-            <!-- <img id="profile-picture" src="profile_picture.png" style="height: 50%;"> -->
+            <img id="profile-picture" src="/images/profile_picture2.png">
+            <h1 style="color: white;">Hello!</h1>
+            <p style="color: white;">
+                My name is Armando Salcido, a recent graduate from UC Irvine with a Bachelor of Science in Computer Science (2020).
+                <br>
+                I am a highly motivated individual and self-starter as I demonstrate in my various side projects and achievements. 
+                <br>
+                I possess knowledge in Object Oriented Programming languages such as Python, C++, Java as well as JavaScript, HTML, CSS, and SQL.
+                I am knowledgable on Data Structures and Algorithms as well!
+                <br>
+                Since graduating I have continued to improve my coding skills by creating various <a href="/projects" style="text-decoration: none; color: yellowgreen;">projects</a> 
+                available on my <a href="https://github.com/aksalcido" style="text-decoration: none; color: yellowgreen;">GitHub portfolio</a>, contributing to an Open-source project called 
+                <a href="https://github.com/PlasmaPy" style="text-decoration: none; color: yellowgreen;">PlasmaPy</a>, as well as learning different tools/frameworks such as Node.js, Express.js,
+                MongoDB, Docker, and more. 
+                <br>
+
+                I love programming, problem solving, and complex thinking and am eager to continue learning a variety of different technologies, tools, and frameworks. 
+
+                Thank you for stopping by!
+            </p>
         </div> <!-- Container div end-->
     </section>
+
 
     <!-- Projects Section -->
     <section id="project-section">
         <div class="container">
             <h1 class="section-header" id="project-section-header">Projects</h1>
             
-
-            <img src="/gifs/gameplay.gif" style="min-width: 310px; height:400px; float: left;">
-            <img src="/gifs/homepage.gif" style="min-width: 310px; height:400px; float: left;">
-            <img src="/gifs/solve.gif" style="min-width: 310px; height:400px; float: left;">
-
-            <!--
             <div class="project-showcase" id="project-brush">
-                <img src="/gifs/homepage.gif" style="min-width: 310px; height:400px; float: left;">
-                <p>Wrap</p>
+                <img class="shown-demo" src="/gifs/homepage.gif" style="min-width: 310px; height:400px; float: left;">
+                <p style="clear: left;">Wrap</p>
             </div>
             
+            <div class="project-showcase" id="project-pacman">
+                <img class="blurred-demo" src="/gifs/gameplay.gif" style="min-width: 310px; height:400px; float:right;">
+                <p style="clear:right">Wrap</p>
+            </div>
 
             <div class="project-showcase" id="project-pacman" style="clear: left;">
-                <img src="/gifs/gameplay.gif" style="min-width: 310px; height:400px; float: right;">
-                <p>Wrap</p>
+                <img class="blurred-demo" src="/gifs/solve.gif" style="min-width: 310px; height:400px; float: left;">
+                <p style="clear: left;">Wrap</p>
             </div>
 
-            <div style="clear: right; text-align: center;">
-                <a href="projects.html">View All Projects</a>
+            <div style="clear: left; text-align: center;">
+                <a id="view-projects-btn" href="/projects">View All Projects</a>
             </div>
-
-             -->
              
         </div> <!-- Container div end-->
     </section>
@@ -85,7 +101,7 @@
             <h1 class="section-header" id="contact-section-header">Contact</h1>
 
             <div id="icon-container" style="text-align: center;">
-                <a href=""><i class="contact-icon fas fa-envelope"></i></a>
+                <a href="#" id="email-icon"><i class="contact-icon fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/armando-salcido-560b15176/"><i class="contact-icon fab fa-linkedin"></i></a>
                 <a href="https://github.com/aksalcido"><i class="contact-icon fab fa-github"></i></a>
             </div>
