--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -2,15 +2,16 @@
 <html>
 <head>
     <title>Projects</title>
+    <link rel="stylesheet" href="/stylesheets/projects.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <ul id="navbar-list">
-            <li class="navbar-item"><a href="/front_page">Home</a></li>
+            <li class="navbar-item"><a href="/">Home</a></li>
             <li class="navbar-item"><a href="/projects">Projects</a></li>
             <li class="navbar-item"><a href="/resume">Resume</a></li>
-            <li class="navbar-item" id="nav-contact"><a>Contact</a></li>
+            <li class="navbar-item" id="nav-contact"><a href="/?contact=true">Contact</a></li>
         </ul>
     </nav>
         
