Styling and Fonts

--- a/public/stylesheets/front_page.css
+++ b/public/stylesheets/front_page.css
@@ -1,16 +1,12 @@
-/* Ensure all boxes stay their designated width regardless of padding */
-* {
-    -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
 /* Remove Top of Page Space for Navbar */
 body {
     margin: 0 !important;
     padding: 0 !important;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
-    font-family: Verdana, sans-serif; /* Temp */
+.mgt-20 {
+    margin-top: 20px;
 }
 
 /* ----- Navbar ----- */
@@ -24,6 +20,8 @@ nav {
     overflow: hidden;
     z-index: 20;
     transition: 0.4s;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
 #navbar-list {
@@ -33,14 +31,13 @@ nav {
 
 .navbar-item {
     float: left;
+    text-align: center;
+    list-style-type: none;
     width: 220px;
     max-width: 220px;
     height: 75px;
     font-size: 24px;
     padding: 16px 12px;
-    text-align: center;
-    list-style-type: none;
-
     transition: 0.2s;
 }
 
@@ -85,11 +82,13 @@ nav {
 }
 
 #front-name {
-    font-size: 48px;
+    font-size: 70px;
+    font-weight: 400;
 }
 
 #front-description {
-
+    font-size: 28px;
+    font-weight: 400;
 }
 
 #navigate-down-img {
@@ -97,7 +96,7 @@ nav {
     bottom: 10px;
 }
 
-/* Sections */
+/* ===== Sections ===== */
 .container {
     height: 100%;
     width: 60%;
@@ -106,15 +105,16 @@ nav {
 
 .section-header {
     margin: 0; 
-    font-size:28px; 
+    font-size:40px; 
     padding: 10px 0px; 
     margin-bottom: 20px;
 }
 
-/* About Section */
+/* ----- About Section ----- */
 #about-section {
-    height: 600px; 
+    height: 100%;
     background: #1A1A1D;
+    overflow: auto;
 }
 
 #about-section-header {
@@ -123,14 +123,15 @@ nav {
 }
 
 #profile-picture {
-    height: 80%; 
+    height: 450px;
     float: right;
+    margin-left: 20px;
     border-radius: 25px;
 }
 
-/* Project Section */
+/* ----- Project Section ----- */
 #project-section {
-    height: 1500px; 
+    height: 100%;
     background: #F2F2F2;
 }
 
@@ -139,19 +140,59 @@ nav {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
 }
 
-.shown-demo {
-    transform: scale(1.10);
-    filter: none;
-    z-index: 5;
+.project-showcase {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    min-height: 450px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.demo-container {
+    height: 400px;
+    width: 40%;
+    text-align: center;
+    background-color: #4e4e5009;
+    
+}
+
+.project-info {
+    height: 100%; 
+    width: 50%;
+}
+
+.project-title {
+    font-size: 50px;
+}
+
+.project-description {
+    font-size: 24px;
+    font-weight: 300;
+}
+
+/* Project Image Related Styling */
+#brush-img {
+    height: 100%;
+    width: 100%;
+}
+
+#pacman-img {
+    height: 100%;
+}
+
+#sudoku-img {
+    height: 100%;
 }
 
 .blurred-demo {
-    transform: scale(1);
-    filter: blur(4px);
-    z-index: 1;
+    filter: blur(8px);
 }
 
-
+/* Bottom Container Containing Button */
+.view-projects-container {
+    padding: 10px 0;
+    text-align: center;
+}
 
 #view-projects-btn {
     display: inline-block;  
@@ -175,7 +216,7 @@ nav {
 }
 
 
-/* Contact Section */
+/* ----- Contact Section ----- */
 #contact-section {
     height: 200px;
     background: #4E4E50;
@@ -185,8 +226,6 @@ nav {
     color: white; 
     border-bottom: 1px solid white;
 }
-
-
 
 /* Footer */
 .footer {
