--- a/public/stylesheets/resume.css
+++ b/public/stylesheets/resume.css
@@ -1,10 +1,3 @@
-/* Ensure all boxes stay their designated width regardless of padding */
-* {
-    -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
 /* Remove Top of Page Space for Navbar */
 body {
     margin: 0 !important;
@@ -22,9 +15,9 @@ nav {
     width: 100%;
     background-color: black;
     overflow: hidden;
-
-        
     transition: 0.4s;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
 #navbar-list {
