--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Projects</title>
+    
+    <!-- Google Font:Open Sans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="/stylesheets/projects.css">
 </head>
 <body>
