--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -2,8 +2,7 @@
 body {
     margin: 0 !important;
     padding: 0 !important;
-
-    font-family: Verdana, sans-serif; /* Temp */
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* ----- Navbar ----- */
@@ -52,4 +51,59 @@ nav {
 
 #nav-contact {
     float: right;
+}
+
+/* Project Page Content */
+#project-page-content {
+    padding-top: 75px;
+}
+
+.container {
+    height: 100%;
+    width: 60%;
+    margin: 0 auto;
+}
+
+#project-tabs {
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+}
+
+#project-tabs-list {
+    display: flex;
+    list-style: none; 
+    margin: 0; /* To remove default bottom margin */ 
+    padding: 0; /* To remove default left padding */
+}
+
+.project-li {
+    text-align: center;
+    color: white; 
+    width: 12.5%;
+    padding: 10px;
+    background: black;
+
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.active-project {
+    background: white;
+    color: black;
+}
+
+/* Project Container Content */
+.project-container {
+    height: 500px;
+    width: 100%;
+    display: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.active-project-container {
+    display: block;
 }
