--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -82,26 +82,39 @@ nav {
     color: white; 
     width: 12.5%;
     padding: 10px;
-    background: black;
 
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #000000;
+    background-image: linear-gradient(147deg, #000000 0%, #434343 74%);
+
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .active-project {
-    background: white;
+    /*background: #F2F2F2;*/
+
+    background-color: white !important;
+    background-image: none;
+
     color: black;
 }
 
 /* Project Container Content */
+#projects {
+    background-color: white;
+}
+
 .project-container {
     height: 500px;
     width: 100%;
     display: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .active-project-container {
