--- a/stylesheets/pages/projects.css
+++ b/stylesheets/pages/projects.css
@@ -16,6 +16,7 @@ body {
     margin: 0 auto;
 }
 
+/* Project Tabs Picker */
 #project-tabs {
     width: 100%;
     height: 100%;
@@ -29,7 +30,37 @@ body {
     padding: 0; /* To remove default left padding */
 }
 
+#project-tabs-list {
+    
+}
+
+.active-project-bg {
+    background: green; 
+
+    border-radius: 50px;
+}
+
 .project-li {
+    color: white;
+    background: black;
+    padding: 10px; 
+    width: 12.5%;
+    text-align: center;
+}
+
+.project-li:first-child {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.project-li:last-child {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+
+/*
+
     text-align: center;
     color: white; 
     width: 12.5%;
@@ -44,11 +75,10 @@ body {
 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-}
+
+*/
 
 .active-project {
-    /*background: #F2F2F2;*/
-
     background-color: white !important;
     background-image: none;
 
