--- a/stylesheets/pages/projects.css
+++ b/stylesheets/pages/projects.css
@@ -3,6 +3,7 @@ body {
     margin: 0 !important;
     padding: 0 !important;
     font-family: 'Source Sans Pro', sans-serif;
+    
 }
 
 /* Project Page Content */
@@ -28,61 +29,30 @@ body {
     list-style: none; 
     margin: 0; /* To remove default bottom margin */ 
     padding: 0; /* To remove default left padding */
-}
-
-#project-tabs-list {
-    
-}
-
-.active-project-bg {
-    background: green; 
-
-    border-radius: 50px;
+    font-weight: 400;
 }
 
 .project-li {
-    color: white;
-    background: black;
     padding: 10px; 
     width: 12.5%;
     text-align: center;
+    color: rgb(88, 88, 88);
+    border-bottom: 5px solid #D2FDFF;
+
+    transition: 0.4s ease all;
 }
 
-.project-li:first-child {
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-
-.project-li:last-child {
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-
-/*
-
-    text-align: center;
-    color: white; 
-    width: 12.5%;
-    padding: 10px;
-
-    background-color: #000000;
-    background-image: linear-gradient(147deg, #000000 0%, #434343 74%);
-
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: 1px solid rgba(0, 0, 0, 0.3);
-
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-
-*/
-
+/* Project Being Viewed */
 .active-project {
-    background-color: white !important;
     background-image: none;
-
     color: black;
+    border-bottom: 5px solid #B4DFE5;
+}
+
+.active-project-bg {
+    color: black;
+    font-weight: 700;
+    border-radius: 50px;
 }
 
 /* Project Container Content */
@@ -94,11 +64,24 @@ body {
     height: 500px;
     width: 100%;
     display: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .active-project-container {
     display: block;
+}
+
+.project-title {
+    font-size: 42px;
+}
+
+.img-container {
+    height: 500px;
+    width: 100%;
+    text-align: center;
+    background-color: #4e4e5009;
+}
+
+.header-image {
+    max-width: 100%;
+    height: 100%;
 }
