--- a/stylesheets/pages/projects.css
+++ b/stylesheets/pages/projects.css
@@ -3,16 +3,20 @@ body {
     margin: 0 !important;
     padding: 0 !important;
     font-family: 'Source Sans Pro', sans-serif;
-    
 }
 
 /* Project Page Content */
 #project-page-content {
+    background: #F2F2F2;
+    height: 100%;
+    min-height: 100vh;
     padding-top: 75px;
 }
 
 .container {
+    background: white;
     height: 100%;
+    min-height: 100vh;
     width: 60%;
     margin: 0 auto;
 }
@@ -70,6 +74,7 @@ body {
     display: block;
 }
 
+/* Project Information */
 .project-title {
     font-size: 42px;
 }
@@ -79,9 +84,34 @@ body {
     width: 100%;
     text-align: center;
     background-color: #4e4e5009;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .header-image {
     max-width: 100%;
     height: 100%;
+}
+
+.project-technology {
+    font-style:italic;
+    font-size: 20px;
+    color:rgb(88, 88, 88);
+}
+
+/* General Purpose Descriptions */
+.info-container {
+    padding: 0 15px 25px;
+    margin-top: 10px;
+    border-bottom: 1px solid gray;
+}
+
+.description {
+    font-size: 24px;
+    text-align: left;
+}
+
+.project-demo {
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
 }
