Project Section Filled

--- a/stylesheets/components/buttons.css
+++ b/stylesheets/components/buttons.css
@@ -15,5 +15,16 @@
 .primary-btn:active {
     transform: translateY(4px);
     box-shadow: 1px;
-    box-shadow: 0 4px 2px -2px gray;
+    box-shadow: 0 4px 2px -2px rgb(199, 199, 199);
+}
+
+.github-btn {
+    background: rgb(226, 226, 226);
+    color: black;
+    transition: 0.1s ease;
+}
+
+.github-btn:hover {
+    color: white;
+    background-color: rgb(88, 88, 88);
 }
