--- a/stylesheets/pages/projects.css
+++ b/stylesheets/pages/projects.css
@@ -7,7 +7,6 @@ body {
 
 /* Project Page Content */
 #project-page-content {
-    background: #F2F2F2;
     height: 100%;
     min-height: 100vh;
     padding-top: 75px;
@@ -42,7 +41,6 @@ body {
     text-align: center;
     color: rgb(88, 88, 88);
     border-bottom: 5px solid #D2FDFF;
-
     transition: 0.4s ease all;
 }
 
@@ -62,6 +60,10 @@ body {
 /* Project Container Content */
 #projects {
     background-color: white;
+    width: 80%; 
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: center;
 }
 
 .project-container {
@@ -114,4 +116,8 @@ body {
     width: 70%;
     height: 100%;
     margin: 0 auto;
+}
+
+.demo-img {
+    max-width: 85%;
 }
