--- a/stylesheets/pages/index.css
+++ b/stylesheets/pages/index.css
@@ -264,13 +264,13 @@ progress::-moz-progress-bar {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    min-height: 450px;
-    padding: 15px 0 5px 0;
+    min-height: 100%;
+    padding: 15px 0 35px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .demo-container {
-    height: 400px;
+    height: 70%;
     width: 40%;
     text-align: center;
     background-color: #4e4e5009;
@@ -290,6 +290,11 @@ progress::-moz-progress-bar {
     font-weight: 300;
 }
 
+.project-technology {
+    font-style: italic;
+    color: gray;
+}
+
 .project-img {
     height: 100%;
 }
@@ -297,6 +302,30 @@ progress::-moz-progress-bar {
 #brush-img {
     width: 100%;
 }
+
+#pacman-img {
+    width: 71%;
+}
+
+#sudoku-img {
+    width: 62%;
+}
+
+/* Project Section Change Display */
+@media (max-width: 1660px) {
+    .project-showcase {
+        flex-direction: column;
+    }
+
+    .demo-container {
+        width: 100%;
+    }
+
+    .project-info {
+        width: 100%;
+    }
+}
+
 
 /* Bottom Container Containing Button */
 .view-projects-container {
